i know, let's use a database

--- a/src/app/style/_variables.scss
+++ b/src/app/style/_variables.scss
@@ -10,7 +10,7 @@ $color-text-highlight: #eee;
 $color-text-disabled: #444;
 $color-text-on-accent-primary: #272727;
 $color-text-component: #bbb;
-$color-text-label: $color-text;
+$color-text-label: #777;
 $color-text-header: $color-text-light;
 
 $color-background-component: #222;
