--- a/src/app/style/_variables.scss
+++ b/src/app/style/_variables.scss
@@ -5,13 +5,13 @@ $color-blue: #3fa2de;
 
 $color-background-base: #262626;
 $color-text: #999;
-$color-text-light: #ddd;
+$color-text-light: #dddddd;
 $color-text-highlight: #eee;
 $color-text-disabled: #444;
 $color-text-on-accent-primary: #272727;
 $color-text-component: #bbb;
 $color-text-label: #777;
-$color-text-header: $color-text-light;
+$color-text-header: $color-text-component;
 
 $color-background-component: #222;
 
