--- a/src/app/style/_button.scss
+++ b/src/app/style/_button.scss
@@ -128,3 +128,17 @@
 
   cursor: not-allowed;
 }
+
+.linkButt {
+  display:inline-block;
+  background: transparent;
+  color: inherit;
+  font-size: inherit;
+  cursor:pointer;
+  padding:0;
+  margin:0;
+  border:0;
+  &:hover {
+    color: $color-link-hover
+  }
+}
