--- a/src/app/style/_search.scss
+++ b/src/app/style/_search.scss
@@ -18,4 +18,5 @@
   background:$color-background-component;
   border-bottom: 1px solid $color-border-table;
   padding: 4px 10px;
+  clear:both;
 }
